Thu May 20 21:25:55 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (miniruby.exe): merge miss of r27053, too.

Thu May 20 19:10:21 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/openssl/extconf.rb: check some functions added at OpenSSL 1.0.0.

	* ext/openssl/ossl_engine.c (ossl_engine_s_load): use engines which
	  exists.

Thu May 20 18:54:33 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (ARCHMINIOBJ): merge miss of r27053.

Wed May 19 23:36:57 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: [ruby-dev:41334] [Bug #3307] invalid result
	  on searching tcl.h/tk.h. Thanks, Masaya Tarui.

Mon May 17 06:19:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (revision.h.tmp): use double quotes for Windows.
	  [ruby-core:30270]

Mon May 17 00:43:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* version.c (ruby_description): RUBY_REVISION_STR may be empty.
	  [ruby-core:30268]

Sun May 16 10:49:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (rb_iconv_sys_fail): fix number of arguments.
	  a patch by Masaya TARUI <tarui AT prx.jp>.

Sat May 15 17:16:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (rb_iconv_sys_fail): raise BrokenLibrary if
	  errno is not set.  [ruby-dev:41317]

Sat May 15 12:36:01 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, common.mk, win32/Makefile.sub (REVISION_H): move
	  before the rule.

	* Makefile.in, common.mk, win32/Makefile.sub (revision.h): fix for
	  nmake.  [ruby-core:30249]

Tue May 11 22:51:11 2010  Tanaka Akira  <akr@fsij.org>

	* pack.c (pack_pack): call rb_quad_pack to preserve RangeError.

Tue May 11 05:37:19 2010  Tanaka Akira  <akr@fsij.org>

	* pack.c: backport integer pack/unpack from 1.9 for [ruby-core:21937].

	* configure.in: backport RUBY_DEFINT and fixed size integer checks.

	* ruby.h: include stdint.h if available.

	* bignum.c (rb_big_pack): defined..
	  (rb_big_unpack): defined.
